--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/videoplatformapi
-spring.datasource.username=root
-spring.datasource.password=haslo
+spring.datasource.url=jdbc:postgresql://localhost:5432/pumped
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-server.error.include-message=always
 
 
